# teo-walking-strategy

./: .gitignore  CMakeLists.txt  README.md
doc/html/: group__YarpPlugins.html  group__YarpPlugins.map  group__YarpPlugins.md5  group__gait-experiments-applications.html  group__gait-experiments-examples.html  group__gait-experiments-libraries.html  group__gait-experiments-libraries.map  group__gait-experiments-libraries.md5  group__gait-experiments-programs.html  group__gait-experiments-tests.html  menudata.js  modules.html  namespaceroboticslab.html  namespaceroboticslab_1_1test.html  namespaces.html
doc/html/search/: all_0.js  all_1.js  all_2.js  groups_0.js  groups_1.js  namespaces_0.js  searchdata.js
doc/latex/: group__YarpPlugins.tex  group__gait-experiments-applications.tex  group__gait-experiments-examples.tex  group__gait-experiments-libraries.tex  group__gait-experiments-programs.tex  group__gait-experiments-tests.tex  modules.tex  namespaceroboticslab.tex  namespaceroboticslab_1_1test.tex  namespaces.tex  refman.tex
libraries/: CMakeLists.txt
programs/: CMakeLists.txt
programs/oneFootStand/: BipedalController.cpp  BipedalController.hpp  CMakeLists.txt  LIPM2d.cpp  OneFootStand (copia).cpp  OneFootStand.cpp  OneFootStand.hpp  OneFootStand_21_abril.cpp  OneFootStand_22_24.cpp  OneFootStand_8NOV.cpp  OneFootStand_DS.cpp  OneFootStand_copy.cpp  OneFootStand_copy2.cpp  OneFootStand_copy2.hpp  OneFootStand_copy3.cpp  OneFootStand_onestep.cpp  utils.h  walkingRobot.cpp  walkingRobot.hpp
programs/stableGait/: CMakeLists.txt  LIPM.cpp  LIPM.hpp  LIPMTrajectoryGenerator.cpp  LIPMTrajectoryGenerator.hpp  LimitChecker.cpp  StepGenerator.cpp  StepGenerator.hpp  TargetBuilder.cpp  TargetBuilder.hpp  TrajectoryGenerator.cpp  TrajectoryGenerator.hpp  VelocityProfile_Custom.cpp  VelocityProfile_Custom.h  main.cpp  walkingRobot.cpp  walkingRobot.hpp
share/contexts/oneFootStand/: oneFootStand-leftLeg.ini
share/contexts/zmpViewer/: zmpViewer-teo.ini
